[gd_scene load_steps=38 format=3 uid="uid://dt5hl3d1g8pyc"]

[ext_resource type="Theme" uid="uid://cmd714lbb53ja" path="res://assets/resources/themes/ui_theme.tres" id="1_n1s24"]
[ext_resource type="Script" uid="uid://dsvoupvqpe7a8" path="res://assets/resources/customResources/shopData/shopData.gd" id="2_bykjx"]
[ext_resource type="Script" uid="uid://cntqh6qweo6dk" path="res://assets/scripts/shopUI/shopUI.gd" id="2_w7wba"]
[ext_resource type="Texture2D" uid="uid://d2nrmdb8p2mjv" path="res://assets/textures/ui/statbar.png" id="3_fcqxl"]
[ext_resource type="PackedScene" uid="uid://ims5mb4jlsni" path="res://assets/scenes/ui/shopui/shopItem.tscn" id="3_x8qdb"]
[ext_resource type="FontFile" uid="uid://xmwjvmqspojb" path="res://assets/fonts/Grand_Aventure_Text.otf" id="4_sqkig"]
[ext_resource type="FontFile" uid="uid://b3s7umd01feyu" path="res://assets/fonts/Carthage Pro Regular.ttf" id="4_uttbu"]
[ext_resource type="FontFile" uid="uid://com86cy2htbbq" path="res://assets/fonts/CreatoDisplay-Regular.otf" id="6_127t2"]
[ext_resource type="AudioStream" uid="uid://crpcvvr4dupq6" path="res://assets/sounds/ui/slideOpen.wav" id="6_s2d3s"]

[sub_resource type="Resource" id="Resource_j36xa"]
script = ExtResource("2_bykjx")
itemsToSell = Array[PackedScene]([null, null, null, null, null])

[sub_resource type="Gradient" id="Gradient_523ba"]
offsets = PackedFloat32Array(0, 0.00985222, 0.497537, 0.847291)
colors = PackedColorArray(0, 0.0705882, 0.0627451, 1, 0.415686, 0.0705882, 0.0705882, 1, 0.341176, 0.0823529, 0.00784314, 1, 0.0431373, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_36g7h"]
gradient = SubResource("Gradient_523ba")
fill_from = Vector2(0, 1)
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_5t6bp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("topBar/topBarimage/shopName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(24, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("topBar/topBarimage/shopName:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("topBar/topBarimage/shopName:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(724.89, 52)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("topBar/topBarimage/shopName:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("topBar/topBarimage:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("topBar/topBarimage:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("topBar/topBarimage:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1602, 65)]
}

[sub_resource type="Animation" id="Animation_wtf11"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("topBar/topBarimage/shopName:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Vector2(-64, 10), Vector2(24, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("topBar/topBarimage/shopName:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("topBar/topBarimage/shopName:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(0.277392, 1),
"update": 0,
"values": [Vector2(724.89, 52), Vector2(724.89, 52)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("topBar/topBarimage/shopName:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.4, 1),
"transitions": PackedFloat32Array(0.108819, 0.196146, 0.482968),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.813487, 0.0557759, 0.102404, 0.990852), Color(1, 1, 1, 0.990852)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("topBar/topBarimage:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.183011, 1),
"update": 0,
"values": [Vector2(0, -68), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("topBar/topBarimage:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("topBar/topBarimage:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(0.176777, 1),
"update": 0,
"values": [Vector2(217, 65), Vector2(1602, 65)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_csp7a"]
_data = {
&"RESET": SubResource("Animation_5t6bp"),
&"new_animation": SubResource("Animation_wtf11")
}

[sub_resource type="Gradient" id="Gradient_lofq7"]
offsets = PackedFloat32Array(0, 0.0292398, 0.962343, 1)
colors = PackedColorArray(0.301961, 0.301961, 0.301961, 0.627451, 0.377919, 0.377919, 0.377919, 1, 0.616751, 0.608018, 0.597974, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_big26"]
gradient = SubResource("Gradient_lofq7")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2o57p"]
texture = SubResource("GradientTexture2D_big26")

[sub_resource type="Gradient" id="Gradient_y0hsx"]
offsets = PackedFloat32Array(0, 0.684211, 1)
colors = PackedColorArray(0.313726, 0, 0, 1, 0.447884, 0, 0, 1, 0.509804, 0, 0, 0.466667)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3r0xx"]
gradient = SubResource("Gradient_y0hsx")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h7f8e"]
texture = SubResource("GradientTexture2D_3r0xx")

[sub_resource type="Environment" id="Environment_2f118"]
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 1
glow_enabled = true

[sub_resource type="World3D" id="World3D_hq7xm"]
environment = SubResource("Environment_2f118")

[sub_resource type="GDScript" id="GDScript_lgeb8"]
resource_name = "previewMesh"
script/source = "extends Node3D

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	rotation.y += 0.01
"

[sub_resource type="AtlasTexture" id="AtlasTexture_yn56l"]
atlas = ExtResource("3_fcqxl")
region = Rect2(0, 3, 512, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6www"]
atlas = ExtResource("3_fcqxl")
region = Rect2(0, 62, 512, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_suq20"]
atlas = ExtResource("3_fcqxl")
region = Rect2(0, 33, 512, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhcs7"]
bg_color = Color(0.294118, 0.294118, 0.294118, 0.541176)
shadow_size = 30

[sub_resource type="StyleBoxLine" id="StyleBoxLine_3q6sw"]
color = Color(0.282353, 0, 0, 1)
thickness = 6

[sub_resource type="Animation" id="Animation_y61yj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1076, 115)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../sound1:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_dwjxi"]
resource_name = "in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.170755, 0.133972),
"update": 0,
"values": [Vector2(-150, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 0.287175),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../sound1:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7y7pm"]
resource_name = "out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.133972, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-550, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.287175, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vamxx"]
_data = {
&"RESET": SubResource("Animation_y61yj"),
&"in": SubResource("Animation_dwjxi"),
&"out": SubResource("Animation_7y7pm")
}

[sub_resource type="Gradient" id="Gradient_6ilb3"]
offsets = PackedFloat32Array(0, 0.0292398, 0.962343, 1)
colors = PackedColorArray(0.301961, 0.301961, 0.301961, 0.627451, 0.377919, 0.377919, 0.377919, 1, 0.616751, 0.608018, 0.597974, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o1lyv"]
gradient = SubResource("Gradient_6ilb3")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t67gv"]
texture = SubResource("GradientTexture2D_o1lyv")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8lwrn"]
random_pitch = 1.3
streams_count = 1
stream_0/stream = ExtResource("6_s2d3s")

[node name="Shop" type="CanvasLayer"]
layer = 2
script = ExtResource("2_w7wba")
shopResource = SubResource("Resource_j36xa")

[node name="shopUi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_n1s24")

[node name="topBar" type="Control" parent="shopUi"]
anchors_preset = 0
offset_right = 1598.0
offset_bottom = 61.0
mouse_filter = 2

[node name="topBarimage" type="TextureRect" parent="shopUi/topBar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.071
offset_right = 4.0
offset_bottom = 60.669
texture = SubResource("GradientTexture2D_36g7h")

[node name="shopName" type="Label" parent="shopUi/topBar/topBarimage"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(724.89, 0)
layout_mode = 0
offset_left = 24.0
offset_top = 10.0
offset_right = 748.89
offset_bottom = 62.0
theme_override_font_sizes/font_size = 51
text = "SHOPNAME"
vertical_alignment = 1

[node name="topbarAnim" type="AnimationPlayer" parent="shopUi/topBar"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_csp7a")
}

[node name="previewHolder" type="Control" parent="shopUi"]
layout_mode = 1
anchor_left = 0.672
anchor_top = 0.128
anchor_right = 0.971
anchor_bottom = 0.989
offset_left = 0.799927
offset_top = -0.200005
offset_right = -0.600098
offset_bottom = -0.100037

[node name="previewBG" type="Panel" parent="shopUi/previewHolder"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1076.0
offset_top = 115.0
offset_right = 1076.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2o57p")

[node name="panel" type="Panel" parent="shopUi/previewHolder/previewBG"]
layout_mode = 0
anchor_left = 0.038
anchor_top = 0.034
anchor_right = 0.958
anchor_bottom = 0.332
offset_left = -0.126001
offset_top = -0.350002
offset_right = 0.0339966
offset_bottom = -0.300018
theme_override_styles/panel = SubResource("StyleBoxTexture_h7f8e")

[node name="subViewportContainer" type="SubViewportContainer" parent="shopUi/previewHolder/previewBG/panel"]
layout_mode = 0
anchor_left = 0.033
anchor_top = 0.033
anchor_right = 0.975
anchor_bottom = 1.0
offset_left = -6.652
offset_top = -0.0749998
offset_right = 0.0999756
offset_bottom = -7.0
stretch = true

[node name="subViewport" type="SubViewport" parent="shopUi/previewHolder/previewBG/panel/subViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_hq7xm")
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
size = Vector2i(420, 216)
render_target_update_mode = 4

[node name="previewMesh" type="Node3D" parent="shopUi/previewHolder/previewBG/panel/subViewportContainer/subViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0623159, 0)
script = SubResource("GDScript_lgeb8")

[node name="camera3d" type="Camera3D" parent="shopUi/previewHolder/previewBG/panel/subViewportContainer/subViewport"]
transform = Transform3D(1, 0, 0, 0, 0.97123, 0.238144, 0, -0.238144, 0.97123, 0, 0.414107, 1.72043)
fov = 26.1

[node name="marginContainer" type="MarginContainer" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.378
anchor_right = 0.964
anchor_bottom = 0.907
offset_top = 0.0499878
offset_right = 17.172
offset_bottom = 0.0749512
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 4

[node name="vBoxContainer" type="VBoxContainer" parent="shopUi/previewHolder/previewBG/marginContainer"]
layout_mode = 2

[node name="label" type="Label" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_uttbu")
theme_override_font_sizes/font_size = 27
text = "Stats"
horizontal_alignment = 1

[node name="hSeparator" type="HSeparator" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
layout_mode = 2

[node name="ItemStatsContainer" type="VBoxContainer" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FireRateContainer" type="VBoxContainer" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer"]
layout_mode = 2

[node name="label" type="Label" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/FireRateContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FIRE RATE"

[node name="textureProgressBar" type="TextureProgressBar" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/FireRateContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.805
nine_patch_stretch = true
stretch_margin_left = 48
stretch_margin_top = 12
stretch_margin_right = 48
stretch_margin_bottom = 12
texture_under = SubResource("AtlasTexture_yn56l")
texture_over = SubResource("AtlasTexture_c6www")
texture_progress = SubResource("AtlasTexture_suq20")

[node name="damageContainer" type="VBoxContainer" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer"]
layout_mode = 2

[node name="label" type="Label" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/damageContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Damage"

[node name="textureProgressBar" type="TextureProgressBar" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/damageContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 0.115
nine_patch_stretch = true
stretch_margin_left = 48
stretch_margin_top = 12
stretch_margin_right = 48
stretch_margin_bottom = 12
texture_under = SubResource("AtlasTexture_yn56l")
texture_over = SubResource("AtlasTexture_c6www")
texture_progress = SubResource("AtlasTexture_suq20")

[node name="penetrationContainer" type="VBoxContainer" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer"]
layout_mode = 2

[node name="label" type="Label" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/penetrationContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Penetration"

[node name="textureProgressBar" type="TextureProgressBar" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer/ItemStatsContainer/penetrationContainer"]
layout_mode = 2
max_value = 1.0
step = 0.0
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 48
stretch_margin_top = 12
stretch_margin_right = 48
stretch_margin_bottom = 12
texture_under = SubResource("AtlasTexture_yn56l")
texture_over = SubResource("AtlasTexture_c6www")
texture_progress = SubResource("AtlasTexture_suq20")

[node name="hSeparator2" type="HSeparator" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
layout_mode = 2

[node name="label2" type="Label" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_uttbu")
theme_override_font_sizes/font_size = 25
text = "Description"
horizontal_alignment = 1

[node name="itemDescriptor" type="RichTextLabel" parent="shopUi/previewHolder/previewBG/marginContainer/vBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = ExtResource("6_127t2")
theme_override_font_sizes/normal_font_size = 27
theme_override_styles/normal = SubResource("StyleBoxFlat_mhcs7")
bbcode_enabled = true
text = "This is a good item..
It was made using the finest steel of the northern coast of the iron fields of the empire of the three people who made the game known as minecraft and forged from the fires of the place that was not too long ago forgotten and recently rediscovered by foragers and hunters and gatherers of there were many but not too many and yet to be discovered"
autowrap_mode = 2

[node name="hSeparator2" type="HSeparator" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.899
anchor_right = 0.969
anchor_bottom = 0.95
offset_left = 0.212999
offset_top = 0.274963
offset_right = -0.213013
offset_bottom = -35.2501
grow_horizontal = 2
grow_vertical = 0

[node name="hSeparator" type="HSeparator" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.027
anchor_top = 0.374
anchor_right = 0.969
anchor_bottom = 0.397
offset_left = 0.120999
offset_top = 0.149963
offset_right = 1.78699
offset_bottom = 0.324951
theme_override_styles/separator = SubResource("StyleBoxLine_3q6sw")

[node name="itemName" type="Label" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.034
anchor_top = 0.335
anchor_right = 0.95
anchor_bottom = 0.379
offset_left = -0.21788
offset_top = 0.375
offset_right = -2.1499
offset_bottom = 0.274994
theme_override_fonts/font = ExtResource("4_sqkig")
theme_override_font_sizes/font_size = 28
text = "M4A1S"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="purchaseButton" type="Button" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.709
anchor_top = 0.907
anchor_right = 0.958
anchor_bottom = 0.963
offset_left = -0.193024
offset_top = 0.0749512
offset_right = 0.0339661
offset_bottom = -0.325073
text = "Purchase"

[node name="animationPlayer" type="AnimationPlayer" parent="shopUi/previewHolder/previewBG"]
libraries = {
&"": SubResource("AnimationLibrary_vamxx")
}

[node name="closePreview" type="Button" parent="shopUi/previewHolder/previewBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 43.0
grow_horizontal = 0
text = "x"

[node name="BrowserBG" type="Panel" parent="shopUi"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.12
anchor_right = 0.664
anchor_bottom = 1.0
offset_right = 0.599976
offset_bottom = -6.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t67gv")

[node name="scrollContainer" type="ScrollContainer" parent="shopUi/BrowserBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.029
anchor_right = 0.865
anchor_bottom = 0.975
offset_left = -0.410002
offset_top = 0.205999
offset_right = 110.345
offset_bottom = -0.350037
mouse_filter = 2

[node name="itemHolder" type="VBoxContainer" parent="shopUi/BrowserBG/scrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="shopItem" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem2" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem3" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem4" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem5" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem6" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem7" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="shopItem8" parent="shopUi/BrowserBG/scrollContainer/itemHolder" instance=ExtResource("3_x8qdb")]
layout_mode = 2
mouse_filter = 2

[node name="tabBar" type="TabBar" parent="shopUi/BrowserBG"]
layout_mode = 0
offset_left = 25.0
offset_top = -30.0
offset_right = 1016.0
offset_bottom = 10.0
mouse_filter = 1
current_tab = 0
tab_count = 7
tab_0/title = "Assault Rifles"
tab_1/title = "Pistols"
tab_2/title = "Shotguns"
tab_3/title = "Throwables"
tab_4/title = "Heavy"
tab_5/title = "SMGs"
tab_6/title = "Special"

[node name="sound1" type="AudioStreamPlayer" parent="shopUi"]
stream = SubResource("AudioStreamRandomizer_8lwrn")
volume_db = -15.0
bus = &"UI"

[connection signal="pressed" from="shopUi/previewHolder/previewBG/purchaseButton" to="." method="_on_purchase_button_pressed"]
[connection signal="pressed" from="shopUi/previewHolder/previewBG/closePreview" to="." method="closePreview"]
[connection signal="tab_selected" from="shopUi/BrowserBG/tabBar" to="." method="_on_tab_bar_tab_selected"]
